chore: fix loading from subpath, remove console.log, add README

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Recreating Angular from Scratch</title>
-        <script type="module" src="/main.js"></script>
+        <script type="module" src="./main.js"></script>
     </head>
     <body>
         <div id="root"></div>
